# rate-limiting-algorithms

./: .gitignore  docker-compose.yml
rate_limiter/: mix.exs
rate_limiter/lib/: dynamic_supervisor.ex  leaky_bucket.ex  rate_limiter.ex  registry.ex  supervisor.ex
rate_limiter/test/: rate_limiter_test.exs
rentals-api/: dev_server.py  pyproject.toml
rentals-api/src/rentals_api/: main.py  models.py
