[project]
name = "rentals-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Gamaliel Jimenez",email = "egjimenezg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "rentals_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "dev_server:main"

